[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Imagens/New Piskel (6).png" type="Texture" id=2]
[ext_resource path="res://music/music/verao-com-chuva-1_CeEa6xXX.ogg" type="AudioStream" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -317.5
margin_top = 102.0
margin_right = 317.5
margin_bottom = 194.0
rect_scale = Vector2( 0.964039, 1.07962 )

[node name="botãojogar" type="Button" parent="VBoxContainer"]
margin_right = 635.0
margin_bottom = 20.0
text = "Jogar"

[node name="botãooplcoes" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 635.0
margin_bottom = 44.0
text = "Opções"

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 635.0
margin_bottom = 68.0
text = "O que é lógica de programação?"

[node name="botaosair" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 635.0
margin_bottom = 92.0
text = "Sair"

[node name="logo" type="Sprite" parent="."]
position = Vector2( 504, 192 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="musica" type="Button" parent="."]
margin_left = 906.0
margin_top = 33.0
margin_right = 997.0
margin_bottom = 82.0
text = "MÚSICA"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="musica"]
stream = ExtResource( 3 )
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/botãojogar" to="." method="_on_botojogar_pressed"]
[connection signal="pressed" from="VBoxContainer/botãooplcoes" to="." method="_on_botooplcoes_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/botaosair" to="." method="_on_botaosair_pressed"]
[connection signal="pressed" from="musica" to="." method="_on_musica_pressed"]
